# db_demo

./: .gitignore  1_audio_mix.cpp  2_audio_decode.cpp  CMakeLists.txt  Configuration_profile.json  H264HardDecode.cpp  HardwareContext.cpp  HardwareContext.h  Makefile  README.md  flvparse.cpp  play.sh  yuv.cpp  yuvscale.cpp
FSPlayer/: Audio.cpp  Audio.h  CMakeLists.txt  FrameQueue.cpp  Media.cpp  Media.h  PacketQueue.h  Video.cpp  Video.h  VideoDisplay.cpp  VideoDisplay.h  main.cpp
Virtual_camera/: CMakeLists.txt  main.cpp
airPlayTest/: CMakeLists.txt  test.cpp
airPlayTest/airPlay/include/: stream.h
airPlayTest/duobei/: CMakeLists.txt  DBApi.cpp  DBApi.h
airPlayTest/duobei/airPlay/: server.cpp  server.h
airPlayTest/duobei/common/: StateCode.h
airPlayTest/duobei/decodec/: AudioDecoder.cpp  AudioDecoder.h  DecoderSpan.cpp  DecoderSpan.h  Filter.cpp  Filter.h  H264Decoder.cpp  H264Decoder.h  PlayInternal.cpp  PlayInternal.h
airPlayTest/duobei/desktop/: library.cpp  library.h
airPlayTest/duobei/parser/: PacketParser.cpp  PacketParser.h
airPlayTest/duobei/receiver/: server.cpp  server.h
airPlayTest/duobei/util/: Callback.cpp  Callback.h  DBLog.cpp  DBLog.h  Time.cpp  Time.h
c++_test/: CMakeLists.txt  main.cpp
c++_test/10.26/: CMakeLists.txt  main.cpp
ffmpeg_capture/: CMakeLists.txt  main.cpp
ffmpeg_curl/: AACDecoder.cpp  AACDecoder.h  CMakeLists.txt  Demuxer.cpp  Demuxer.h  H264Decoder.cpp  H264Decoder.h  HttpClient.cpp  HttpClient.h  HttpFile.cpp  HttpFile.h  Optional.h  SDLPlayer.cpp  SDLPlayer.h  ffplay.cpp  main.cpp
ffplay/: Audio.cpp  Audio.h  AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt  Demuxer.cpp  Demuxer.h  FrameQueue.cpp  FrameQueue.h  H264Decoder.cpp  H264Decoder.h  HttpClient.h  HttpFile.cpp  HttpFile.h  Media.cpp  Media.h  Optional.h  PacketQueue.cpp  SDLPlayer.cpp  SDLPlayer.h  Video.cpp  Video.h  VideoDisplay.cpp  VideoDisplay.h  main.cpp
flv_parse/: CMakeLists.txt  FlvParse.cpp  FlvParse.h  H264Decoder.cpp  H264Decoder.h  HttpClient.cpp  HttpClient.h  Optional.cpp  Optional.h  SDLPlayer.cpp  SDLPlayer.h  SpeexDecoder.cpp  SpeexDecoder.h  flvparse.cpp  flvplayer.cpp  test.cpp
flv_parse/hlring/: RingBuffer.cpp  rbuf.c
h264_hardDecode/: CMakeLists.txt  H264HardDecode.cpp
h264_parse/: CMakeLists.txt  H264Encoder.cpp  H264Encoder.h  RtmpSender.cpp  RtmpSender.h  VideoBuffer.h  main.cpp
json/: CMakeLists.txt  json.cpp
libyuv/: CMakeLists.txt
opengl/: CMakeLists.txt  test.cpp
opus/: CMakeLists.txt  OpusEncoder.cpp  OpusEncoder.h  SpeexEncoder.cpp  SpeexEncoder.h  main.cpp
root/client_testing/: CMakeLists.txt  H264HardDecode.cpp  H264HardDecode.h  Param.h  RapidJsonWrapper.hpp  audio_mix.cpp  audio_mix.h  c++_test.cpp  c++_test.h  deal_yuv.cpp  deal_yuv.h  demux_audio_mix.cpp  demux_audio_mix.h  ffmpeg_capture.cpp  ffmpeg_capture.h  ffmpeg_curl.cpp  ffmpeg_curl.h  ffplay.cpp  ffplay.h  flv_player.cpp  flv_player.h  json.cpp  json.h  main.cpp  mainPlayer.cpp  mainPlayer.h  send_h264.cpp  send_h264.h  send_speex.cpp  send_speex.h  simplest_ffmpeg_video_filter.cpp  simplest_ffmpeg_video_filter.h
root/codec/: AudioBuffer.h  OpusDecoder.h  OpusEncoder.h  SpeexEncoder.cpp  SpeexEncoder.h  VideoRecorder.cpp
root/common/: PacketParser.h
root/display/: SDLPlayer.cpp  SDLPlayer.h
root/hlring/: RingBuffer.h
root/network/: HttpFile.cpp
root/src_code/codec/: AudioBuffer.cpp  AudioBuffer.h  AudioDecoder.cpp  AudioDecoder.h  H264Decoder.cpp  H264Decoder.h  H264Encoder.cpp  HardwareContext.cpp  HardwareContext.h  OpusDecoder.cpp  OpusEncoder.cpp  OpusEncoder.h  SpeexDecoder.cpp  SpeexDecoder.h  SpeexEncoder.cpp  SpeexEncoder.h  VideoBuffer.cpp  VideoBuffer.h  VideoRecorder.cpp  VideoRecorder.h
root/src_code/common/: PacketParser.cpp  PacketParser.h
root/src_code/demux/: Demuxer.cpp  Demuxer.h
root/src_code/display/: MediaState.h  SDLPlayer.cpp  SDLPlayer.h
root/src_code/hlring/: rbuf.c
root/src_code/network/: HttpFile.cpp  HttpFile.h
root/src_code/offline/: FlvParse.cpp  FlvParse.h
root/src_code/stream/: RtmpSender.cpp  RtmpSender.h
root/src_code/utils/: Optional.cpp  Optional.h  Yuvscale.cpp  Yuvscale.h
root/utils/: Yuvscale.cpp
sdl_play_audio/: CMakeLists.txt  simplest_audio_play_sdl2.cpp
src/client_testing/: RapidJsonWrapper.hpp  audio_mix.cpp  c++_test.h  deal_yuv.cpp  deal_yuv.h  demux_audio_mix.cpp  demux_audio_mix.h  flv_player.cpp  json.h  main.cpp  mainFfmpegCurl.cpp  send_h264.cpp  send_h264.h  simplest_ffmpeg_video_filter.cpp
src/codec/: AACDecoder.cpp  H264Encoder.cpp  H264Encoder.h  OpusEncoder.cpp  OpusEncoder.h  SpeexDecoder.cpp  SpeexEncoder.cpp  SpeexEncoder.h  VideoBuffer.cpp  VideoBuffer.h
src/common/: PacketParser.cpp
src/network/: HttpFile.h
src/offline/: FlvParse.cpp
src/stream/: RtmpSender.cpp  RtmpSender.h
src/utils/: Time.cpp  Time.h
test/: CMakeLists.txt  simplest_ffmpeg_video_filter.cpp
vlc_player/: CMakeLists.txt  vlcPlayer.cpp
yuv_deal/: yuvscale.h
